[package]
name = "yeli"
version = "0.1.2"
edition = "2024"
description = "A pure-Rust LV2 plugin host (livi alternative, no lilv/serd/sord C code)"
license = "LGPL-2.1-or-later"
repository = "https://github.com/mlm-games/yeli"

[lib]
name = "yeli"

[dependencies]
oxttl = "0.2"
oxrdf = "0.3"
lv2-sys = "2.0"
libloading = "0.9"
hound = "3.5"
